# django_Study

./: Readme.txt  db.sqlite3  manage.py  pyproject.toml
Search_For_Trip/: apps.py  forms.py  models.py  urls.py  views.py
Search_For_Trip/migrations/: 0001_initial.py
Search_For_Trip/templates/Search_For_Trip/: base.html  cities_list.html  city_form.html
django_Study/: asgi.py  settings.py  urls.py  wsgi.py
test_site/: apps.py
